fix align for policy

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1571,6 +1571,7 @@ i.like-icon  {
 }
 
 .policy-list {
+    text-align: center;
     padding: 0 25px;
     border-left: 1px solid #dfdfdf;
 }
